--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     let BOTTOM_PRICE_Y  = 0.90;
 
     // Title placement (top center)
-    const TITLE_TOP_MARGIN_PX = 6;
+    let TITLE_TOP_MARGIN_PX = 0;
 
     // Colors
     const COLOR = {
@@ -83,6 +83,17 @@
       return Math.max(0.65, Math.min(1.15, s));
     }
     const px = (n)=> Math.round(n * scaleUnit());
+
+    // --- Quick tuning via URL: ?ty=-20&cardsY=14 (14%) ---
+    (function applyQueryTweaks(){
+      try {
+        const qs = new URLSearchParams(location.search);
+        const ty = Number(qs.get('ty'));
+        if (!Number.isNaN(ty)) TITLE_TOP_MARGIN_PX = ty;
+        const cardsY = Number(qs.get('cardsY'));
+        if (!Number.isNaN(cardsY)) TOP_OVERLAY_Y = Math.min(0.30, Math.max(0.05, cardsY/100));
+      } catch {}
+    })();
 
     // -------- Progressive background loading (blur-up + crossfade) --------
     let thumbBitmap = null;
