--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
     const BURN_JSON   = 'data/burn.json';
     const PRICE_JSON  = 'data/price.json';
-    const FIT_MODE    = 'cover'; // 'contain' to avoid any crop
+    const FIT_MODE    = 'cover'; // keep cover for full bleed
+    // Background focus: 0 = top, 0.5 = center, 1 = bottom
+    let BG_FOCUS_X = 0.5;
+    let BG_FOCUS_Y = 0.36; // show a bit more sky/title area
 
     // Draw UI only when everything is ready (bg + data)
     const DRAW_UI_ONLY_WHEN_READY = true;
@@ -85,6 +88,10 @@
         const qs = new URLSearchParams(location.search);
         const cardsY = Number(qs.get('cardsY'));
         if (!Number.isNaN(cardsY)) TOP_OVERLAY_Y = Math.min(0.30, Math.max(0.05, cardsY/100));
+        const fy = Number(qs.get('focusY'));
+        if (!Number.isNaN(fy)) BG_FOCUS_Y = Math.min(1, Math.max(0, fy));
+        const fx = Number(qs.get('focusX'));
+        if (!Number.isNaN(fx)) BG_FOCUS_X = Math.min(1, Math.max(0, fx));
       } catch {}
     })();
 
@@ -180,11 +187,23 @@
       const bmp = (bgReady && mainBitmap) ? mainBitmap : (showThumb ? thumbBitmap : null);
 
       if (bmp){
+        // --- cover with focus crop ---
         const imgW = bmp.width, imgH = bmp.height;
         const scale = (FIT_MODE === 'cover') ? Math.max(w / imgW, h / imgH) : Math.min(w / imgW, h / imgH);
-        const dw = imgW * scale; const dh = imgH * scale;
-        const dx = (w - dw) / 2; const dy = (h - dh) / 2;
-        if (showThumb){ ctx.save(); ctx.filter = 'blur(8px)'; ctx.drawImage(bmp, dx, dy, dw, dh); ctx.restore(); }
+        const sw = Math.min(imgW, Math.round(w / scale));
+        const sh = Math.min(imgH, Math.round(h / scale));
+        let cx = Math.round(BG_FOCUS_X * imgW);
+        let cy = Math.round(BG_FOCUS_Y * imgH);
+        // convert center to source top-left (sx, sy)
+        let sx = Math.max(0, Math.min(imgW - sw, cx - Math.round(sw/2)));
+        let sy = Math.max(0, Math.min(imgH - sh, cy - Math.round(sh/2)));
+        if (showThumb){ ctx.save(); ctx.filter = 'blur(8px)'; ctx.drawImage(bmp, sx, sy, sw, sh, 0, 0, w, h); ctx.restore(); }
+        else { ctx.drawImage(bmp, sx, sy, sw, sh, 0, 0, w, h); }
+        ctx.fillStyle = grad; ctx.fillRect(0,0,w,h);
+      } else {
+        ctx.fillStyle = '#0b0b12'; ctx.fillRect(0,0,w,h);
+      }
+    }
         else { ctx.drawImage(bmp, dx, dy, dw, dh); }
         ctx.fillStyle = grad; ctx.fillRect(0,0,w,h);
       } else {
