--- a/index.html
+++ b/index.html
@@ -192,18 +192,17 @@
         const scale = (FIT_MODE === 'cover') ? Math.max(w / imgW, h / imgH) : Math.min(w / imgW, h / imgH);
         const sw = Math.min(imgW, Math.round(w / scale));
         const sh = Math.min(imgH, Math.round(h / scale));
-        let cx = Math.round(BG_FOCUS_X * imgW);
-        let cy = Math.round(BG_FOCUS_Y * imgH);
-        // convert center to source top-left (sx, sy)
-        let sx = Math.max(0, Math.min(imgW - sw, cx - Math.round(sw/2)));
-        let sy = Math.max(0, Math.min(imgH - sh, cy - Math.round(sh/2)));
+        const cx = Math.round(BG_FOCUS_X * imgW);
+        const cy = Math.round(BG_FOCUS_Y * imgH);
+        const sx = Math.max(0, Math.min(imgW - sw, cx - Math.round(sw/2)));
+        const sy = Math.max(0, Math.min(imgH - sh, cy - Math.round(sh/2)));
         if (showThumb){ ctx.save(); ctx.filter = 'blur(8px)'; ctx.drawImage(bmp, sx, sy, sw, sh, 0, 0, w, h); ctx.restore(); }
         else { ctx.drawImage(bmp, sx, sy, sw, sh, 0, 0, w, h); }
         ctx.fillStyle = grad; ctx.fillRect(0,0,w,h);
       } else {
         ctx.fillStyle = '#0b0b12'; ctx.fillRect(0,0,w,h);
       }
-    
+    }
 
     function draw(){
       resizeCanvasToDisplaySize();
@@ -336,7 +335,19 @@
     window.addEventListener('resize', draw);
     refreshData();
     setInterval(refreshData, 5*60*1000);
+
+    window.addEventListener('error', (e)=>{
+      try {
+        ctx.save();
+        ctx.fillStyle = 'rgba(0,0,0,0.6)';
+        ctx.fillRect(0,0,canvas.width,canvas.height);
+        ctx.setTransform(1,0,0,1,0,0);
+        ctx.fillStyle = '#ffbab8';
+        ctx.font = 'bold 16px system-ui, sans-serif';
+        ctx.fillText('Runtime error: '+(e.error?.message || e.message || 'unknown'), 16, 32);
+        ctx.restore();
+      } catch(_){}
+    });
   </script>
 </body>
 </html>
-
